<resources>
    <string name="app_name">Movie</string>
    <string name="action_settings">Settings</string>


    <string name="menu_sort">Sort order</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_sort_dialog_title">Sort order</string>
    <string name="menu_sort_title_asc">Title (asc)</string>
    <string name="menu_sort_title_desc">Title (desc)</string>
    <string name="menu_sort_data_asc">File path (asc)</string>
    <string name="menu_sort_data_desc">File pat (desc)</string>
    <string name="menu_sort_size_asc">File size (asc)</string>
    <string name="menu_sort_size_desc">File size (desc)</string>
    <string name="menu_sort_duration_asc">Duration (asc)</string>
    <string name="menu_sort_duration_desc">Duration (desc)</string>
    <string name="menu_sort_date_added_asc">Date added (asc)</string>
    <string name="menu_sort_date_added_desc">Date added (desc)</string>
    <string name="menu_sort_date_modified_asc">Date modified (asc)</string>
    <string name="menu_sort_date_modified_desc">Date modified (desc)</string>

    <string name="pref_resume_title">Resume settings</string>
    <string name="pref_resume_checkbox_title">Enable resume</string>
    <string name="pref_resume_checkbox_summary">Turn on resume.</string>
    <string name="pref_clear_resume_title">Clear resume data</string>
    <string name="pref_clear_resume_summary">Delete all resume data</string>
    <string name="pref_clear_resume_dialog_title">Clear resume data</string>
    <string name="pref_clear_resume_dialog_message">Do you want to clear?</string>

    <string name="pref_resume_dialog_title">Exist resume</string>
    <string name="pref_resume_dialog_message">Play from resume position?</string>
    <string name="pref_resume_dialog_yes">yes</string>
    <string name="pref_resume_dialog_no">no</string>

    <string name="pref_toast_title">Toast settings</string>
    <string name="pref_show_toast_title">Show Toast</string>
    <string name="pref_show_toast_summary">Show Toast when starting movie.</string>
</resources>
